test/libsolidity/syntaxTests/nameAndTypeResolution/314_fixed_type_zero_handling.sol
contract test {
    function f() public {
        fixed16x2 a = 0; a;
        ufixed32x1 b = 0; b;
    }
}
// ----
// UnimplementedFeatureError: Not yet implemented - FixedPointType.
